un coso de alias que me faltaba

--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -124,6 +124,7 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 	{$res \igobs$ entrenadoresPosibles($c,j$)}
 	[$O()$]
 	[devuelve el conjunto de jugadores esperando a capturar el pokémon que se encuentra en la posición.]
+	[$res$ no es modificable.]
 
 	\InterfazFuncion{IndiceRareza}{\In{j}{juego}, \In{pk}{pokemon}}{nat}
 	[$pk \in$ pokemons($j$)]
