--- a/modulos/modulo_diccString.tex
+++ b/modulos/modulo_diccString.tex
@@ -210,7 +210,7 @@ Usaremos $copy(s)$ para denotar el costo de copiar el elemento $s \in \alpha$. L
 
 	~
 
-	\tadOperacion{Tuplas}{secu(String)/cs, dicc(String, $\alpha$)/dic}{secu(tupla(String, $\alpha$))}{}
+	\tadOperacion{Tuplas}{secu(String)/cs, dicc(String{,}\ $\alpha$)/dic}{secu(tupla(String, $\alpha$))}{}
 
 	\tadAxioma{Tuplas(cs, dic)}
 	{\IF vacia?(cs) THEN
