te subo el mapa roni

--- a/modulos/modulo_mapa.tex
+++ b/modulos/modulo_mapa.tex
@@ -12,8 +12,21 @@ Description %%TODO
 
 \subsubsection{Operaciones básicas de Mapa}
 
-%TODO
+\InterfazFuncion{CrearMapa}{}{map}
+[]
+{$res \igobs crearMapa$}
+[$O(1))$]
+[Crea un mapa vacío]
+[]
 
+~
+
+\InterfazFuncion{AgregarCoor}{\In{c}{coor}, \Inout{m}{map}}{map}
+[$m \igobs m_0$]
+{$m \igobs agregarCoor(c,m)$}
+[]
+[Agrega la coordenada al mapa ]
+[]
 
 \subsubsection{Representación de Mapa}
 
