Compilar el tp entero

--- a/resolucion.tex
+++ b/resolucion.tex
@@ -51,6 +51,9 @@
 \input{modulos/modulo_juego}
 
 \pagebreak
+\input{modulos/modulo_mapa}
+
+\pagebreak
 \input{modulos/modulo_coordenada}
 
 \pagebreak
