--- a/modulos/modulo_mapa.tex
+++ b/modulos/modulo_mapa.tex
@@ -2,61 +2,60 @@
 
 Description %%TODO
 
-\subsection{Interfaz}
-
+\begin{Interfaz}
 	\textbf{se explica con}: \tadNombre{mapa}.
 
 	\textbf{géneros}: \TipoVariable{map}.
 
-~
 
-\subsubsection{Operaciones básicas de Mapa}
+	\TituloDis{Operaciones básicas de Mapa}
 
-\InterfazFuncion{CrearMapa}{}{map}
-[]
-{$res \igobs crearMapa$}
-[$O(1))$]
-[Crea un mapa vacío]
-[]
+	\InterfazFuncion{CrearMapa}{}{map}
+	[]
+	{$res \igobs crearMapa$}
+	[$O(1))$]
+	[Crea un mapa vacío]
+	[]
 
-~
+	\InterfazFuncion{AgregarCoor}{\In{c}{coor}, \Inout{m}{map}}{map}
+	[$m \igobs m_0$]
+	{$m \igobs agregarCoor(c,m)$}
+	[]
+	[Agrega la coordenada al mapa ]
+	[]
 
-\InterfazFuncion{AgregarCoor}{\In{c}{coor}, \Inout{m}{map}}{map}
-[$m \igobs m_0$]
-{$m \igobs agregarCoor(c,m)$}
-[]
-[Agrega la coordenada al mapa ]
-[]
-
-\subsubsection{Representación de Mapa}
-
-\begin{Estructura}{ Mapa }[eMap]
-	\begin{Tupla}[eMap]
-		\tupItem{alto}{nat}
-		\tupItem{ancho}{nat}
-		\tupItem{posValidas}{vector(vector(bool))}
-	\end{Tupla}
-\end{Estructura}
-
-\subsubsection{Invariante de Representación}
-
-\Rep[eMap][e]{
-	e.alto = long(posValidas(e.posValidas)) $\yluego$
-	($\exists i$: nat)(i $<$ e.alto $\implies$ long(e.posValidas[i]) = e.ancho) $\land$
-	($\forall i$: nat)(i $<$ e.alto $\implies$ long(e.posValidas[i]) $\leq$ e.ancho)
-}
+\end{Interfaz}
 
 
-\subsubsection{Función de Abstracción}
+\begin{Representacion}
+	\TituloDis{Representación de Mapa}
 
-\Abs[eMap]{map}[e]{m}
-{
-	($\exists c$: coor)(c $\in$ coordenadas(m) $\implies$ latitud(c) = e.alto) $\yluego$
-	($\exists c$: coor)(c $\in$ coordenadas(m) $\implies$ longitud(c) = e.ancho) $\yluego$
-	($\forall c$: coor)
-		(c $\in$ coordenadas(m) $\implies$ 
-			latitud(c) $\leq$ e.alto $\yluego$
-			longitud(c) $\leq$ long(e.posValidas[latitud(c)]) $\yluego$ 
-			e.posValidas[latitud(c)][longitud(c)]) $\land$
-		(c $\not\in$ coordenadas(m) $\land$ latitud(c) $\leq$ e.alto $\land$ longitud(c) $\leq$ long(e.posValidas[latitud(c)]) $\implies$ $\neg$ e.posValidas[latitud(c)][longitud(c)])
-}
+	\begin{Estructura}{ Mapa }[eMap]
+		\begin{Tupla}[eMap]
+			\tupItem{alto}{nat}
+			\tupItem{ancho}{nat}
+			\tupItem{posValidas}{vector(vector(bool))}
+		\end{Tupla}
+	\end{Estructura}
+
+	\TituloDis{Invariante de Representación}
+
+	\Rep[eMap][e]{
+		e.alto = long(posValidas(e.posValidas)) $\yluego$ \\
+		($\exists i$: nat)(i $<$ e.alto $\implies$ long(e.posValidas[i]) = e.ancho) $\land$ \\
+		($\forall i$: nat)(i $<$ e.alto $\implies$ long(e.posValidas[i]) $\leq$ e.ancho)
+	}
+
+	\TituloDis{Función de Abstracción}
+
+	\Abs[eMap]{map}[e]{m}{
+		($\exists c$: coor)(c $\in$ coordenadas(m) $\implies$ latitud(c) = e.alto) $\yluego$ \\
+		($\exists c$: coor)(c $\in$ coordenadas(m) $\implies$ longitud(c) = e.ancho) $\yluego$ 
+		($\forall c$: coo\end{Representacion}r)( \\
+			(c $\in$ coordenadas(m) $\implies$ 
+				latitud(c) $\leq$ e.alto $\yluego$
+				longitud(c) $\leq$ long(e.posValidas[latitud(c)]) $\yluego$ 
+				e.posValidas[latitud(c)][longitud(c)]) $\land$ \\
+			(c $\not\in$ coordenadas(m) $\land$ latitud(c) $\leq$ e.alto $\land$ longitud(c) $\leq$ long(e.posValidas[latitud(c)]) $\implies$ $\neg$ e.posValidas[latitud(c)][longitud(c)]))
+	}
+\end{Representacion}
