--- a/modulos/modulo_juego.tex
+++ b/modulos/modulo_juego.tex
@@ -4,9 +4,11 @@ La cantidad de cada pokémon se guarda en un diccionario basado en trie, usando 
 
 \begin{Interfaz}
 
-	\textbf{se explica con}: \tadNombre{Juego}, \tadNombre{Secuencia($\alpha$)}, \tadNombre{Diccionario($\kappa$,$\sigma$)}, \tadNombre{Conjunto Lineal($\alpha$)}.
+	\textbf{se explica con}: \tadNombre{Juego}.
 
 	\textbf{géneros}: \TipoVariable{juego}.
+
+	\textbf{servicios usados}: \tadNombre{Vector($\alpha$)}, \tadNombre{DiccionarioString($\alpha$)}, \tadNombre{Conjunto Lineal($\alpha$)}
 
 
 	\InterfazFuncion{CrearJuego}{\In{m}{mapa}}{juego}
