--- a/modulos/modulo_mapa.tex
+++ b/modulos/modulo_mapa.tex
@@ -1,6 +1,9 @@
 \section{Módulo Mapa}
 
-Description %%TODO
+Las posiciones se almacenan en una grilla dinámica.
+El mapa asegura la posibililidad de encontrar conexiones rápidamente al costo de agregado lento. En cada posición se almacena el grupo del conexiones al que pertenece: se considera que dos posiciones están conectadas si pertenecen al mismo grupo. Al ser agregada una posición, las nuevas conexiones se calculan automáticamente.
+
+Usaremos $lat_{max}$ y $long_{max}$ para denotar las máximas dimensiones entre las posiciones válidas.
 
 \begin{Interfaz}
 	\textbf{se explica con}: \tadNombre{mapa}.
@@ -10,80 +13,64 @@ Description %%TODO
 	\TituloDis{Operaciones básicas de Mapa}
 
 	\InterfazFuncion{CrearMapa}{}{map}
-	[]
 	{$res \igobs crearMapa$}
-	[$O(1))$]
-	[Crea un mapa vacío]
-	[]
+	[$O(1)$]
+	[crea un mapa vacío.]
 
-	\InterfazFuncion{AgregarCoor}{\In{c}{coor}, \Inout{m}{map}}{map}
+	\InterfazFuncion{AgregarCoor}{\In{c}{coor}, \Inout{m}{map}}{}
 	[$m \igobs m_0$]
-	{$m \igobs agregarCoor(c,m)$}
-	[]
-	[Agrega la coordenada al mapa ]
-	[]
+	{$m \igobs agregarCoor(c,m_0)$}
+	[$O(lat_{max} \times long_{max})$]
+	[agrega la coordenada al mapa.]
 
 	\InterfazFuncion{Coordenadas}{\In{m}{map}}{conj(coor)}
-	[]
 	{$res \igobs coordenadas(m)$}
-	[]
-	[Devuelve las coordenadas de un mapa]
-	[]
+	[$O(lat_{max} \times long_{max})$]
+	[devuelve las coordenadas de un mapa]
 
 	\InterfazFuncion{PosExistente}{\In{c}{coor}, \In{m}{map}}{bool}
-	[]
 	{$res \igobs posExistente(m)$}
-	[]
-	[Verifica si existe la coordenada ]
-	[]
+	[$O(1)$]
+	[verifica si existe la coordenada.]
 
 	\InterfazFuncion{HayCamino}{\In{c1}{coor}, \In{c2}{coor}, \In{m}{map}}{bool}
-	[$c1 \in$ coordenadas(m) $\land$ $c2 \in$ coordenadas(m)]
+	[$c1 \in$ coordenadas(m) $\land \ c2 \in$ coordenadas(m)]
 	{$res \igobs hayCamino(m)$}
-	[]
-	[]
-	[]
+	[$O(1)$]
+	[verifica si hay un camino entre dos coordenadas.]
 
-	\InterfazFuncion{ExisteCamino}{\In{c1}{coor}, \In{c2}{coor}, \In{m}{map}}{bool}
-	[$c1 \in$ coordenadas(m) $\land$ $c2 \in$ coordenadas(m)]
-	{$res \igobs existeCamino(m)$}
-	[]
-	[]
-	[]
 \end{Interfaz}
 
 
 \begin{Representacion}
 	\TituloDis{Representación de Mapa}
 
-	\begin{Estructura}{ Mapa }[eMap]
+	\begin{Estructura}{Mapa}[eMap]
 		\begin{Tupla}[eMap]
 			\tupItem{alto}{nat}
 			\tupItem{ancho}{nat}
-			\tupItem{posValidas}{vector(vector(bool))}
+			\tupItem{posiciones}{vector(vector(dataPos))}
+		\end{Tupla}
+
+		\begin{Tupla}[dataPos]
+			\tupItem{posValida}{bool}
+			\tupItem{grupo}{nat}
 		\end{Tupla}
 	\end{Estructura}
 
 	\TituloDis{Invariante de Representación}
 
 	\Rep[eMap][e]{
-		e.alto = long(posValidas(e.posValidas)) $\yluego$ \\
-		($\exists i$: nat)(i $<$ e.alto $\implies$ long(e.posValidas[i]) = e.ancho) $\land$ \\
-		($\forall i$: nat)(i $<$ e.alto $\implies$ long(e.posValidas[i]) $\leq$ e.ancho)
+		e.alto = long(e.posiciones) $\yluego$ \\
+		($\exists i$: nat)(i $<$ e.alto $\implies$ long(e.posiciones[i]) = e.ancho) $\land$ \\
+		($\forall i$: nat)(i $<$ e.alto $\implies$ long(e.posiciones[i]) $\leq$ e.ancho)
 	}
 
 	\TituloDis{Función de Abstracción}
 
-	\Abs[eMap]{map}[e]{m}
-	{
-		($\exists c$: coor)(c $\in$ coordenadas(m) $\implies$ latitud(c) = e.alto) $\yluego$ \\
-		($\exists c$: coor)(c $\in$ coordenadas(m) $\implies$ longitud(c) = e.ancho) $\yluego$ 
-		($\forall c$: coor)( \\
-			(c $\in$ coordenadas(m) $\implies$ 
-				latitud(c) $\leq$ e.alto $\yluego$
-				longitud(c) $\leq$ long(e.posValidas[latitud(c)]) $\yluego$ 
-				e.posValidas[latitud(c)][longitud(c)]) $\land$ \\
-			(c $\not\in$ coordenadas(m) $\land$ latitud(c) $\leq$ e.alto $\land$ longitud(c) $\leq$ long(e.posValidas[latitud(c)]) $\implies$ $\neg$ e.posValidas[latitud(c)][longitud(c)]))
+	\Abs[eMap]{map}[e]{m}{
+		($\forall c$: coor) (c $\in$ coordenadas(m) $\iff$ \\
+		latitud(c) $<$ e.alto $\yluego$ longitud(c) $<$ long(e.posiciones[latitud(c)]) $\yluego$ e.posiciones[latitud(c)][longitud(c)])
 	}
 \end{Representacion}
 
@@ -93,32 +80,57 @@ Description %%TODO
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iCrearMapa}{}{map}}
-		res $\leftarrow$ Vacia()\;
+		res.alto $\leftarrow$ 0\OdeLinea{1}
+		res.ancho $\leftarrow$ 0\OdeLinea{1}
+		res.posiciones $\leftarrow$ Vacia()\OdeLinea{1}
 	\end{algorithm}
+
+	\complejidad: $O()$
+
+	\justifcomp:
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iAgregarCoor}{\In{c}{coor}, \Inout{m}{map}}{}}
 	\end{algorithm}
 
+	\complejidad: $O()$
+
+	\justifcomp:
+
+	~
+
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iCoordenadas}{\In{m}{map}}{}}
 	\end{algorithm}
+
+	\complejidad: $O()$
+
+	\justifcomp:
+
+	~
 
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iPosExistente}{\In{c}{coor}, \In{m}{map}}{}}
 	\end{algorithm}
 
+	\complejidad: $O()$
+
+	\justifcomp:
+
+	~
+
 	\begin{algorithm}[H]
 		\NoCaptionOfAlgo
 		\caption{\algoritmo{iHayCamino}{\In{c1}{coor}, \In{c2}{coor}, \In{m}{map}}{}}
 	\end{algorithm}
 
-	\begin{algorithm}[H]
-		\NoCaptionOfAlgo
-		\caption{\algoritmo{iExisteCamino}{\In{c1}{coor}, \In{c2}{coor}, \In{m}{map}}{}}
-	\end{algorithm}
+	\complejidad: $O()$
+
+	\justifcomp:
 
 \end{Algoritmos}
